@@ -3,8 +3,7 @@ write and report coverage data using the 'figleaf' module.
 """
 import py
 
-figleaf = py.test.importorskip("figleaf")
-import figleaf.annotate_html
+figleaf = py.test.importorskip("figleaf.annote_html")
 
 def pytest_addoption(parser):
     group = parser.addgroup('figleaf options')
